# dermCNN

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
results/: classification_report_binary.txt  classification_report_malignant_only.txt  training_log_binary.csv  training_log_malignant_only.csv
src/dermCNN/: __main__.py  app_gradio.py  callbacks.py  config.py  data.py  evaluate.py  main.py  model.py  plot.py  train.py
